# langchain-v1-projects

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
01-semantic-search/: semantic_search.ipynb
01-semantic-search/chroma_db/: chroma.sqlite3
02-rag-langchain-agents/: rag_langchain_agent.ipynb
03-rag-langgraph-agents/: rag_with_langgraph_agent.ipynb
04-sql-agent-langgraph/: create_sample_db.py  sql-agent-with-langgraph.ipynb
04-sql-agent-langgraph/db/: employees.db
agentic-rag/: agentic_rag_chromadb.ipynb
